examples/test/testpolicy18462.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18462
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key34: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value11
      podSelector:
        matchLabels:
          key14: value39
          key49: value10
          key45: value25
